--- a/tcm/modules/web/src/main/webapp/pages/advisor/adash.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/advisor/adash.xhtml
@@ -34,7 +34,7 @@
                                     <div class="EmptyBox10"></div>
                                     <i class="fa fa-bell Fs24 animated swing infinite gray"></i>
                                     <span class="Fs10 DispBlock gray">Messages</span>
-                                    <span class="Fs24 DispBlock red">#{adashbean.getMessage("Message")}</span>
+                                    <span class="Fs24 DispBlock red">#{adashbean.getMessage("AdvisorMessage")}</span>
 
                                     <div class="EmptyBox10"></div>
                                 </div>
