--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p1.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p1.xhtml
@@ -24,11 +24,13 @@
 
         <div class="TexAlCenter">
             <h3>
-               <div class="mobileFullWidth"> I am </div><pe:inputNumber styleClass="invInputText input_agewid1 mobileFullWidthinput"
+               <div class="mobileFullWidth"> I am </div>
+                <pe:inputNumber styleClass="invInputText input_agewid1 mobileFullWidthinput"
                                      value="#{tcmpb.age}"
                                      decimalPlaces="0" minValue="0" maxValue="110" size="9"
                     required="true" requiredMessage="Age is required!"
-                    validatorMessage="Age should be between 18 and 100."/> <div class="mobileFullWidth">years old.</div>
+                    validatorMessage="Age should be between 18 and 100."/>
+                <div class="mobileFullWidth">years old.</div>
             </h3>
         </div>
 
