--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
@@ -6,53 +6,64 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
     <div class="Container100 TextAlCenter">
-    <div class="Container100 Responsive100 Fleft">
-        <h3 class="TexAlCenter StepsQuestionsFS">
-            The chart below shows the potential one-year loss or gain for five hypothetical portfolios.
-            Select the option that matches your comfort zone to continue.
-        </h3>
+        <div class="Container100 Responsive100 Fleft">
+            <h3 class="TexAlCenter StepsQuestionsFS">
+                The chart below shows the potential one-year loss or gain for five hypothetical portfolios.
+                Select the option that matches your comfort zone to continue.
+            </h3>
 
-        <h:inputHidden value="#{tcmpb.riskCalculator.ans4}"
-                       required="true"
-                       requiredMessage="Please click on one of the images below to select appropriate risk."/>
+            <h:inputHidden value="#{tcmpb.riskCalculator.ans4}"/>
+<!--
+                           required="true"
+                           requiredMessage="Please click on one of the images below to select appropriate risk."/>
+-->
 
-        <div class="EmptyBox20"></div>
-        <div class="Container100 TexAlCenter">
+            <div class="EmptyBox20"></div>
+            <div class="Container100 TexAlCenter">
+                <p:messages showDetail="false" sticky="true" escape="true" closable="true"/>
 
-            <p:panel id="riskimgpanel" styleClass="Container100"
-                     style="border: 0px; background: transparent;">
-                <p:commandLink actionListener="#{tcmpb.riskCalculator.setAnswer(4,1)}"
-                               update=":ceForm:riskimgpanel">
-                    <img src="#{tcmpb.getRiskGraphic(1)}"
-                         class="riskImage"/>
-                </p:commandLink>
+                <p:panel id="riskimgpanel" styleClass="Container100"
+                         style="border: 0px; background: transparent;">
+                    <p:commandLink action="#{tcmpb.riskSelected(1)}"
+                                   update=":ceForm:riskimgpanel">
+                        <img src="#{tcmpb.getRiskGraphic(1)}"
+                             class="riskImage"/>
+                    </p:commandLink>
 
-                <p:commandLink actionListener="#{tcmpb.riskCalculator.setAnswer(4,2)}"
-                               update=":ceForm:riskimgpanel">
-                    <img src="#{tcmpb.getRiskGraphic(2)}"
-                         class="riskImage"/>
-                </p:commandLink>
+                    <p:commandLink action="#{tcmpb.riskSelected(2)}"
+                                   update=":ceForm:riskimgpanel">
+                        <img src="#{tcmpb.getRiskGraphic(2)}"
+                             class="riskImage"/>
+                    </p:commandLink>
 
-                <p:commandLink actionListener="#{tcmpb.riskCalculator.setAnswer(4,3)}"
-                               update=":ceForm:riskimgpanel">
-                    <img src="#{tcmpb.getRiskGraphic(3)}"
-                         class="riskImage"/>
-                </p:commandLink>
+                    <p:commandLink action="#{tcmpb.riskSelected(3)}"
+                                   update=":ceForm:riskimgpanel">
+                        <img src="#{tcmpb.getRiskGraphic(3)}"
+                             class="riskImage"/>
+                    </p:commandLink>
 
-                <p:commandLink actionListener="#{tcmpb.riskCalculator.setAnswer(4,4)}"
-                               update=":ceForm:riskimgpanel">
-                    <img src="#{tcmpb.getRiskGraphic(4)}"
-                         class="riskImage"/>
-                </p:commandLink>
+                    <p:commandLink action="#{tcmpb.riskSelected(4)}"
+                                   update=":ceForm:riskimgpanel">
+                        <img src="#{tcmpb.getRiskGraphic(4)}"
+                             class="riskImage"/>
+                    </p:commandLink>
 
-                <p:commandLink actionListener="#{tcmpb.riskCalculator.setAnswer(4,5)}"
-                               update=":ceForm:riskimgpanel">
-                    <img src="#{tcmpb.getRiskGraphic(5)}"
-                         class="riskImage"/>
-                </p:commandLink>
-            </p:panel>
-</div>
+                    <p:commandLink action="#{tcmpb.riskSelected(5)}"
+                                   update=":ceForm:riskimgpanel">
+                        <img src="#{tcmpb.getRiskGraphic(5)}"
+                             class="riskImage"/>
+                    </p:commandLink>
+                </p:panel>
+                <div class="EmptyBox10"></div>
+                <h:outputText value="The questions determine your attitude toward risk.  It is one of many inputs
+that determine your optimal porttolio.  A change in your attiture toward risk
+may not impact your initial target portfolio.">
+
+                </h:outputText>
+            </div>
+
         </div>
+
 
         <div class="EmptyBox5"></div>
         <p:commandButton styleClass="prev" value="Previous" rendered="#{tcmpb.pagemanager.prevButtonStat}"
@@ -62,6 +73,7 @@
         <p:commandButton styleClass="Fright" value="Next" rendered="#{tcmpb.pagemanager.nextButtonStat}"
                          update=":ceForm:inputArea"
                          actionListener="#{tcmpb.nextPage}"/>
+
         <div class="EmptyBox10"></div>
         <div class="Container100 Responsive100 Fleft">
             <ui:include src="/pages/consumer/tcm/cadd/rightPanel.xhtml"/>
