--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p5.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p5.xhtml
@@ -10,8 +10,43 @@
             Assuming you invest for at least 10 years, in the course of any given year,
             which of the following range of returns would be most acceptable to you?
         </h3>
+        <p:messages showDetail="false" sticky="true" escape="true" closable="true"/>
+
+        <div class="EmptyBox10"></div>
 
         <p:outputPanel id="goalPanel" deferred="true" style="background: transparent; border: 0px">
+            <div class="Container40">
+                <div class="Wid45 BorderedBox Fright TexAlCenter responsiveFullwidth">
+                    <div class="ContainerIndent">
+                        <div class="EmptyBox5"></div>
+                        <span class="Fs14 DispBlock gray">Average Market Performance</span>
+                                    <span class="Fs24 DispBlock red">
+                                    <h:outputText value="#{tcmpb.charts.avgPerformance}">
+                                        <f:convertNumber pattern="$#,###,###,##0"/>
+                                    </h:outputText>
+                                   </span>
+
+                        <div class="EmptyBox5"></div>
+                    </div>
+                </div>
+                <div class="Wid10 Fright" style="height:1px;"></div>
+                <div class="Wid45 BorderedBox Fright TexAlCenter responsiveFullwidth">
+                    <div class="ContainerIndent">
+                        <div class="EmptyBox5"></div>
+                        <span class="Fs14 DispBlock gray">Poor Market Performance</span>
+                                    <span class="Fs24 DispBlock invessenceblue">
+                                      <h:outputText value="#{tcmpb.charts.poorPerformance}">
+                                          <f:convertNumber pattern="$#,###,###,##0"/>
+                                      </h:outputText>
+                                     </span>
+
+                        <div class="EmptyBox5"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="EmptyBox5"></div>
+
             <table class="Container100" style="border: 0px">
                 <tr>
                     <td>
