--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/cEdit.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/cEdit.xhtml
@@ -12,9 +12,9 @@
                 <p:steps id="progressbar" activeIndex="#{tcmpb.pagemanager.page}">
                     <p:menuitem value="Start"/>
                     <p:menuitem value="Horizon"/>
-                    <p:menuitem value="Expectations"/>
-                    <p:menuitem value="Portfolios"/>
-                    <p:menuitem value="Returns"/>
+                    <p:menuitem value="Objective"/>
+                    <p:menuitem value="Risk"/>
+                    <p:menuitem value="Projection"/>
                     <p:menuitem value="Review"/>
                 </p:steps>
 
