--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p3.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p3.xhtml
@@ -9,7 +9,7 @@
     <div class="Container100 TextAlCenter">
         <div class="Container100 Responsive100 Fleft">
             <h3 class="TexAlCenter StepsQuestionsFS">
-                Which of the following best reflects your expectations for this investment?
+                Which of the following best reflects your objectives for this investment?
             </h3>
             <div class="Container100">
                 <div class="Container25 Responsive0" style="height:1px;"></div>
