--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
@@ -9,7 +9,7 @@
         <div class="Container100 Responsive100 Fleft">
             <h3 class="TexAlCenter StepsQuestionsFS">
                 The chart below shows the potential one-year loss or gain for five hypothetical portfolios.
-                Select the option that matches your comfort zone to continue.
+                Select the option that best matches your comfort zone to continue.
             </h3>
 
             <h:inputHidden value="#{tcmpb.riskCalculator.ans4}"/>
@@ -56,7 +56,7 @@
                 </p:panel>
                 <div class="EmptyBox10"></div>
                 <h:outputText value="The questions determine your attitude toward risk.  It is one of many inputs
-that determine your optimal porttolio.  A change in your attiture toward risk
+that determine your optimal portfolio.  A change in your attiture toward risk
 may not impact your initial target portfolio.">
 
                 </h:outputText>
